deployment/manifests-values-addons/application/templates/deployment.yaml
---
# Source: application/templates/deployment.yaml

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: gateway
    group: com.stakater.platform
    provider: stakater
    version: "1.0.0"
    chart: "application-0.0.12"
    release: "RELEASE-NAME"
    heritage: "Tiller"
  name: gateway
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
        group: com.stakater.platform
        provider: stakater
        version: "1.0.0"
        chart: "application-0.0.12"
        release: "RELEASE-NAME"
        heritage: "Tiller"
        app: gateway
        
    spec:
      containers:
      - name: gateway
        image: "stakater/stakater-nordmart-gateway:v0.0.3"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        
      serviceAccountName: gateway
