deployment/manifests-values-addons/application/templates/service.yaml
---
# Source: application/templates/service.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
    group: com.stakater.platform
    provider: stakater
    version: "1.0.0"
    chart: "application-0.0.13"
    release: "NAMESPACE_NAME-gateway"
    heritage: "Tiller"
  name: gateway
spec:
  selector:
    app: gateway
    
  ports:
    - name: https
      port: 8080
      targetPort: 8080
